spring boot 源码研究搭建的test项目

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 				<module>spring-boot-project</module>
 				<!-- Smoke tests are built via the invoker plugin -->
 				<module>spring-boot-tests</module>
+				<module>windeaker-tests</module>
 			</modules>
 		</profile>
 		<!-- M2E profile to allow easy import into Eclipse -->
@@ -121,6 +122,7 @@
 			<modules>
 				<module>spring-boot-project</module>
 				<module>spring-boot-tests</module>
+				<module>windeaker-tests</module>
 			</modules>
 		</profile>
 		<profile>
